log
Wed 08 May 2024 11:41:43 PM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
6837f28
Wed 08 May 2024 11:49:57 PM UTC: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  5|7
total_score: 5/70
95898a9
Wed 08 May 2024 11:51:17 PM UTC: 
 treemap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
d015032
Wed 08 May 2024 11:55:24 PM UTC: 
 treemap.c | 33 ++++++++++++++++++++++++++++++++-
 1 file changed, 32 insertions(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
68aa663
Wed 08 May 2024 11:57:07 PM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
7e7e466
Thu 09 May 2024 12:07:24 AM UTC: 
 treemap.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
 tests:  16|4
total_score: 30/70
3b4f387
Thu 09 May 2024 12:08:06 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:105:18: error: variable ‘child’ set but not used [-Werror=unused-but-set-variable]
  105 |         TreeNode child;
      |                  ^~~~~
cc1: all warnings being treated as errors
Compilation failed
ba2030f
Thu 09 May 2024 12:08:38 AM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  17|4
total_score: 35/70
b4768d5
Thu 09 May 2024 12:10:01 AM UTC: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  18|3
total_score: 40/70
123a997
Thu 09 May 2024 12:16:00 AM UTC: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
48601ce
Fri 10 May 2024 09:38:21 PM UTC: 
 treemap.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
 tests:  22|2
total_score: 50/70
8dcf2f4
